--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.2/semantic.min.css" integrity="sha512-SiIJxbOr7Na6RNtynWMbdqGAKTQDMzt2aEBBtb1TfPM9bbgWdDuW+9fR/4t5W5/5NBqoA1i13mCLWxR8hnt5XQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
